force-app/main/default/objects/Television__c/Television__c.object-meta.xml
<CustomObject>
    <description>This object holds the information of the televisions</description>
    <label>Television</label>
    <nameField>
        <label>Television Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Televisions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>