force-app/main/default/objects/Television__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>Customer name has the full name of the customer.</description>
    <inlineHelpText>Ensure to add full name of yours.</inlineHelpText>
    <label>Customer Name</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>