force-app/main/default/objects/Television__c/fields/Display_Model_Type__c.field-meta.xml
<CustomField>
    <fullName>Display_Model_Type__c</fullName>
    <description>Shows the different type of display type for the television.</description>
    <label>Display Model Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LED</fullName>
            </value>
            <value>
                <fullName>OLED</fullName>
            </value>
            <value>
                <fullName>QLED</fullName>
            </value>
            <value>
                <fullName>NanoCell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>