force-app/main/default/objects/Television__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>It stores the email of the customers. Every email must be unique.</description>
    <inlineHelpText>Ensure the correct email format and email should be unique.</inlineHelpText>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>