force-app/main/default/objects/Television__c/fields/Model_Price__c.field-meta.xml
<CustomField>
    <fullName>Model_Price__c</fullName>
    <description>Price of the model in Indian Rupees.</description>
    <inlineHelpText>Ensure the currency should be in Indian Rupees.</inlineHelpText>
    <label>Model Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>