force-app/main/default/objects/Television__c/fields/Model_Type__c.field-meta.xml
<CustomField>
    <fullName>Model_Type__c</fullName>
    <label>Model Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Smart</fullName>
            </value>
            <value>
                <fullName>LED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>