force-app/main/default/objects/Television__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Stores the phone number of the customer.</description>
    <inlineHelpText>Mention your phone number is correct format.</inlineHelpText>
    <label>Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>