force-app/main/default/objects/Television__c/fields/Pincode__c.field-meta.xml
<CustomField>
    <fullName>Pincode__c</fullName>
    <description>It stores the PIN code of the customers</description>
    <inlineHelpText>Ensure the PIN should be only 6 digits.</inlineHelpText>
    <label>Pincode</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>