force-app/main/default/objects/Television__c/fields/test_unique__c.field-meta.xml
<CustomField>
    <fullName>test_unique__c</fullName>
    <formula>TRIM(LEFT(Customer_Name__c, 5)&amp;&quot;-&quot; &amp; RIGHT(Id, 5))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test unique</label>
    <type>Text</type>
</CustomField>