force-app/main/default/objects/Television__c/fields/Unique_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Unique_Serial_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>It stores the unique serial number values.</description>
    <externalId>true</externalId>
    <inlineHelpText>Ensure the unique serial number must be alphanumeric format.
Mention exact serial number. It is case sensitive.</inlineHelpText>
    <label>Unique Serial Number</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>