force-app/main/default/objects/Television__c/recordTypes/Apple_TV.recordType-meta.xml
<RecordType>
    <fullName>Apple_TV</fullName>
    <active>true</active>
    <description>Television with Apple brand.</description>
    <label>Apple TV</label>
</RecordType>