force-app/main/default/objects/Television__c/recordTypes/Chroma_TV.recordType-meta.xml
<RecordType>
    <fullName>Chroma_TV</fullName>
    <active>true</active>
    <description>Television with Chroma brand.</description>
    <label>Chroma TV</label>
</RecordType>