force-app/main/default/objects/Television__c/recordTypes/LG_TV.recordType-meta.xml
<RecordType>
    <fullName>LG_TV</fullName>
    <active>true</active>
    <description>Television with LG brand.</description>
    <label>LG TV</label>
</RecordType>