force-app/main/default/objects/Television__c/recordTypes/Samsung_TV.recordType-meta.xml
<RecordType>
    <fullName>Samsung_TV</fullName>
    <active>true</active>
    <description>Television with samsung brand.</description>
    <label>Samsung TV</label>
</RecordType>