force-app/main/default/objects/Television__c/recordTypes/Sony_TV.recordType-meta.xml
<RecordType>
    <fullName>Sony_TV</fullName>
    <active>true</active>
    <description>Television with Sony brand.</description>
    <label>Sony TV</label>
</RecordType>