force-app/main/default/objects/Television__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Display_Model_Type__c</columns>
    <columns>Model_Price__c</columns>
    <columns>Model_Type__c</columns>
    <columns>Email__c</columns>
    <columns>Unique_Serial_Number__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>